# teg_applications

./: .gitmodules  README.md  requirements.txt
graphics/perlin_noise/: CMakeLists.txt  optimize_perlin.cu  optimize_perlin_2t.cu  optimize_perlin_colorized.cu  perlin.cuh  perlin_2t.cuh  perlin_colorized.cuh  render_perlin.cu  teg_perlin_base.py  teg_perlin_colorized_base.py  teg_perlin_colorized_threshold_fwdderiv.py  teg_perlin_colorized_thresholded.py  teg_perlin_double_threshold_fwdderiv.py  teg_perlin_double_thresholded.py  teg_perlin_noise.py  teg_perlin_threshold_deriv.py  teg_perlin_threshold_fwdderiv.py  teg_perlin_thresholded.py  types.cuh
graphics/perlin_noise/scripts/: get_cuda_sm.sh
graphics/triangulation/: CMakeLists.txt  _renderpixel.h  _tegpixel.h  common.cuh  integral.py  linear.cuh  loss.py  loss_function.py  quadratic.cuh  rasterize copy.cu  renderpixel.h  teg_linear_base.py  teg_linear_bilinear_base.py  teg_linear_bilinear_deriv.h  teg_linear_bilinear_deriv.py  teg_linear_bilinear_integral.py  teg_linear_deriv.h  teg_linear_deriv.py  teg_linear_deriv_nodelta.py  teg_linear_integral.h  teg_linear_integral.py  teg_linear_loss.py  teg_quadratic_base.py  teg_quadratic_deriv.py  teg_quadratic_deriv_nodelta.py  teg_quadratic_integral.h  teg_quadratic_integral.py  teg_quadratic_loss.py  tegpixel.h  temp.h  test.cu  triangle.cuh  triangulate_const.cu  triangulate_linear.cu  triangulate_quadratic.cu
physics/: billiards3d_teg.py  billiards3d_teg_backup.py  billiards3d_teg_backup2.py  billiards3d_teg_backupexpbasic.py  billiards3d_teg_backupexpflat.py  billiards3d_teg_backupexpround.py  billiards3d_teg_backupwallflat.py  billiards3d_teg_backupwallround.py  billiards_constraints.py  billiards_technical_test.py  billiards_teg.py  billiards_teg_derivative_weirdness.py  billiardsmulti_teg_backup2ball1hole2.py  billiardsmulti_teg_backup2ball1hole3.py  billiardsmulti_teg_backup2ball1hole3nodelta.py  billiardsmulti_teg_backup2ball1holesquare.py  billiardsmulti_teg_backup2ball2hole.py  billiardsmulti_teg_backup2ball2hole2.py  bungee_sym.py  gaussian_rasterize.py  smooth.py  springs.py  springs2.py  springs3.py  springs5.py  springs5_vis.py  springs5_vis3d.py  stress_strain.py  test.py  test_sad.py
probabilistic_programming/: distinguishing_samples.py  utils.py  vein_artery.py
util/: smooth.py
